# gpc

./: CHANGELOG.md  Main.hs  README.md  gigaparsec.cabal  hie.yaml
.github/workflows/: haskell-ci.yml  haskell.yml
examples/: Main.hs
experiments/: DataDependent.hs  Experiment1.hs  Experiment2.hs  Experiment3.hs  Experiment4.hs  Main.hs  StackBased.hs
plnl23/: embedding-generalized-parsing-in-haskell.key
src/: Gigaparsec.hs
src/Gigaparsec/: Common.hs  Core.hs  Syntax.hs
tests/: test.hs
