cabal-version:   3.8
name:            gigaparsec
version:         0.1.0.0
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          jaro.reinders@gmail.com
maintainer:      Jaro Reinders
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable gigaparsec
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, containers, lattices, data-reify, row-types, recover-rtti
    default-language: Haskell2010
