cabal-version:   3.0
name:            gigaparsec
version:         0.1.0.0
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          jaro.reinders@gmail.com
maintainer:      Jaro Reinders
build-type:      Simple
extra-doc-files: CHANGELOG.md
synopsis:        Leightweight generalized parser combinators
category:        Parsing
description:
    Gigaparsec (Gpc) is a library providing generalized parser combinators (Gpc)
    which are able to parse all context-free grammars completely. This includes
    support for left-recursion and reporting all possible parses of ambiguous
    grammars.

    Gigaparsec is currently only a proof of concept. Of course it needs a much more
    elaborate API, but before that I want to implement disambiguation strategies.
    I have also not put any effort in making this library performant yet.

source-repository head
    type:     git
    location: https://github.com/noughtmare/gigaparsec

common common
    build-depends:            base >= 4.14 && <5, containers, free
    ghc-options:              -Wall
    default-language:         GHC2021

library
    import:           common
    exposed-modules:          Gigaparsec, Gigaparsec.Core
    hs-source-dirs:           src

executable gigaparsec-examples
    import:           common
    main-is:          Main.hs
    hs-source-dirs:           examples
    build-depends:    gigaparsec

executable gigaparsec-experiments
    import:           common
    main-is:          Main.hs
    hs-source-dirs:           experiments